--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "3.35.5",
+    "axios": "^1.4.0",
     "country-flag-icons": "^1.5.7",
     "framer-motion": "^10.12.16",
     "i18next": "^22.5.1",
