--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "apexcharts": "3.35.5",
     "axios": "^1.4.0",
     "country-flag-icons": "^1.5.7",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^10.12.17",
     "i18next": "^22.5.1",
     "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
@@ -21,6 +21,8 @@
     "react-hook-form": "^7.44.3",
     "react-i18next": "^12.3.1",
     "react-icons": "^4.9.0",
+    "react-js-pagination": "^3.0.3",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
