--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "country-flag-icons": "^1.5.7",
     "framer-motion": "^10.12.17",
     "i18next": "^22.5.1",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
     "react-calendar": "^3.9.0",
