--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "3.35.5",
     "axios": "^1.4.0",
     "country-flag-icons": "^1.5.7",
+    "file-saver": "^2.0.5",
     "framer-motion": "^10.12.17",
     "i18next": "^22.5.1",
     "pdfmake": "^0.2.7",
