--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.1",
     "@react-pdf/renderer": "^3.1.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -21,7 +22,7 @@
     "react-apexcharts": "1.4.0",
     "react-calendar": "^3.9.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.44.3",
+    "react-hook-form": "^7.46.2",
     "react-i18next": "^12.3.1",
     "react-icons": "^4.9.0",
     "react-js-pagination": "^3.0.3",
@@ -33,6 +34,7 @@
     "sweetalert2": "^11.7.12",
     "tailwindcss-rtl": "^0.9.0",
     "web-vitals": "^2.1.4",
+    "yup": "^1.3.1",
     "zustand": "^4.3.8"
   },
   "scripts": {
